--- a/recipes/index.html
+++ b/recipes/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Recipe Suggester</title>
+    <title>Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
       }
       body {
         font-family: 'VT323', monospace;
-        background-color: #2c3e50; /* Darker, neutral background for desktop view */
+        background-color: #2c3e50;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -45,7 +45,7 @@
       .phone-body {
         width: 100%;
         height: 70vh;
-        background: #1e3355; /* Classic blue */
+        background: #1e3355;
         display: flex;
         flex-direction: column;
         padding: 15px;
@@ -54,14 +54,17 @@
       }
       .phone-screen {
         position: relative;
-        background-color: #a5c9a5; /* Classic green */
-        color: #3b4f3b; /* Dark green text */
+        background-color: #a5c9a5;
+        color: #3b4f3b;
         flex-grow: 1;
         padding: 15px;
         font-size: 18px;
         border: 4px solid #333;
         border-radius: 5px;
-        overflow: hidden;
+        overflow: hidden; 
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
       }
       .screen-header {
         display: flex;
@@ -70,43 +73,6 @@
         margin-bottom: 15px;
         padding-bottom: 5px;
         gap: 10px;
-      }
-      .toggle-control {
-        display: inline-flex;
-        align-items: center;
-        font-size: 14px;
-        color: #1e3355;
-        cursor: pointer;
-      }
-      .toggle-control input {
-        display: none;
-      }
-      .toggle-slider {
-        width: 37px;
-        height: 18px;
-        border: 2px solid #1e3355;
-        border-radius: 999px;
-        background-color: #cfe3cf;
-        position: relative;
-        transition: background-color 0.2s;
-      }
-      .toggle-slider::after {
-        content: '';
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        width: 14px;
-        height: 14px;
-        border-radius: 50%;
-        background-color: #1e3355;
-        transition: transform 0.2s;
-      }
-      .toggle-control input:checked + .toggle-slider {
-        background-color: #1e3355;
-      }
-      .toggle-control input:checked + .toggle-slider::after {
-        background-color: #cfe3cf;
-        transform: translateX(18px);
       }
       .screen-title {
         font-weight: bold;
@@ -142,6 +108,48 @@
         justify-content: space-between;
         gap: 8px;
         padding-top: 15px;
+        transition: opacity 0.3s, visibility 0.3s, height 0.3s, padding-top 0.3s, margin-top 0.3s;
+      }
+      .phone-keypad.hidden {
+        opacity: 0;
+        height: 0;
+        padding-top: 0;
+        margin-top: 0;
+        pointer-events: none;
+        visibility: hidden; 
+      }
+      .action-keypad {
+        display: flex;
+        justify-content: center;
+        gap: 8px;
+        padding-top: 15px;
+        transition: opacity 0.3s, visibility 0.3s, height 0.3s, padding-top 0.3s, margin-top 0.3s;
+      }
+      .action-keypad.hidden {
+        opacity: 0;
+        height: 0;
+        padding-top: 0;
+        margin-top: 0;
+        pointer-events: none;
+        visibility: hidden;
+      }
+      .shuffle-button {
+        background-color: #3d5277;
+        border: 1px solid #b0b8c8;
+        border-radius: 40px;
+        color: #d6e0f4;
+        padding: 8px 12px;
+        flex: 0 1 auto;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-family: 'VT323', monospace;
+        font-size: 16px;
+        transition: background-color 0.1s, color 0.1s;
+        text-align: center;
+      }
+      .shuffle-button:active, .shuffle-button.active {
+        background-color: #b0b8c8;
+        color: #1e3355;
       }
       .phone-button {
         background-color: #3d5277;
@@ -162,12 +170,60 @@
         color: #1e3355;
       }
       .recipe-display {
-        margin-top: 15px;
-        padding-top: 10px;
-        border-top: 2px solid #3b4f3b;
+        flex-grow: 1;
+        position: relative;
         min-height: 120px;
-        overflow-y: auto;
+        border-top: 1px solid #3b4f3b4d;
+        margin-top: 0;
+        padding-top: 0;
       }
+      #recipe-content {
+        height: 100%;
+        overflow-y: auto;
+        padding-top: 10px;
+        padding-bottom: 210px;
+        box-sizing: border-box;
+      }
+      .recipe-display h3 {
+        margin: 0 0 10px 0;
+        font-size: 22px;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+      .recipe-display p {
+        margin: 10px 0;
+        line-height: 1.5;
+        font-size: 18px;
+      }
+      .recipe-display p strong {
+        font-size: 18px;
+        display: inline-block;
+        text-transform: uppercase;
+        letter-spacing: 0.2px;
+      }
+      .ascii-fixed-footer {
+          position: absolute;
+          bottom: 40px;
+          left: 0;
+          right: 0;
+          padding: 10px 15px 15px 15px; 
+          color: #3b4f3b;
+          z-index: 10;
+          pointer-events: none;
+          max-height: 200px;
+          transition: opacity 0.3s;
+      }
+      .ascii-fixed-footer.hidden {
+          opacity: 0;
+          visibility: hidden;
+      }
+      .ascii-fixed-footer pre {
+          font-size: 10px;
+          line-height: 1;
+          margin: 0;
+          white-space: pre;
+      }
+      
       .form-section {
         margin-top: 20px;
         padding-top: 15px;
@@ -379,16 +435,6 @@
         animation: blink-caret .75s step-end infinite;
       }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root">
@@ -398,17 +444,22 @@
           <div class="screen-header">
             <div class="header-buttons">
               <button class="header-button" id="open-add-sheet">Add Recipe</button>
-              <button class="header-button" id="enable-inline-update" disabled>Update Recipe</button>
-              <label class="toggle-control" aria-label="Show all recipes">
-                <input type="checkbox" id="show-all-toggle" />
-                <span class="toggle-slider" aria-hidden="true"></span>
-              </label>
+              <button class="header-button" id="show-recipes-button">Show Recipes</button>
             </div>
           </div>
 
           <div class="recipe-display" id="recipe-display">
-            <span class="blinking-cursor">&nbsp;</span>
+            <!-- This inner div is the scrollable content container -->
+            <div id="recipe-content">
+              <span class="blinking-cursor">&nbsp;</span>
+            </div>
+            
+            <!-- This is the fixed ASCII art footer -->
+            <div class="ascii-fixed-footer hidden" id="ascii-footer">
+                <!-- Content will be injected by JS -->
+            </div>
           </div>
+
           <div class="add-sheet-overlay" id="add-sheet-overlay" aria-hidden="true">
             <div class="add-sheet" role="dialog" aria-modal="true" aria-labelledby="add-sheet-title">
               <div class="sheet-header">
@@ -435,7 +486,10 @@
             </div>
           </div>
         </main>
-        <div class="phone-keypad">
+        <div class="action-keypad" id="action-keypad">
+          <button class="shuffle-button" id="shuffle-button">Shuffle</button>
+        </div>
+        <div class="phone-keypad hidden" id="time-keypad">
           <button class="phone-button" data-time="Morning">Morning</button>
           <button class="phone-button" data-time="Afternoon">Afternoon</button>
           <button class="phone-button" data-time="Night">Night</button>
@@ -443,6 +497,5 @@
       </div>
     </div>
     <script src="script.js"></script>
-  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
