--- a/recipes/index.html
+++ b/recipes/index.html
@@ -138,7 +138,7 @@
         border: 1px solid #b0b8c8;
         border-radius: 40px;
         color: #d6e0f4;
-        padding: 8px 12px;
+        padding: 8px 20px;
         flex: 0 1 auto;
         cursor: pointer;
         text-transform: uppercase;
@@ -433,6 +433,11 @@
         height: 18px;
         background-color: #3b4f3b;
         animation: blink-caret .75s step-end infinite;
+      }
+      @media (max-width: 768px) { 
+        .phone-body {
+          height: 100vh;
+        }
       }
     </style>
 </head>
