--- a/recipes/index.html
+++ b/recipes/index.html
@@ -503,4 +503,8 @@
     </div>
     <script src="script.js"></script>
 </body>
+<script>
+  // Placeholder for GitHub Action Injection
+  window.GHSHEET_API_URL = '__API_URL_PLACEHOLDER__';
+</script>
 </html>
